--- a/pages/create/create.html
+++ b/pages/create/create.html
@@ -1,6 +1,6 @@
 <section class="create">
   <h1>Create Form</h1>
-  <form>
+  <form class="createForm">
     <div class="inputRow">
       <input type="text" id="fName" name="fName" placeholder="First Name" />
       <input type="text" id="lName" name="lName" placeholder="Last Name" />
@@ -24,6 +24,6 @@
       />
       <input type="password" id="pin" name="pin" placeholder="Pin" />
     </div>
-    <input type="submit" id="create-submit" value="Submit" />
+    <input type="submit" id="submit" value="Submit" />
   </form>
 </section>
