--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -5,8 +5,8 @@
       <form>
         <input
           type="text"
-          id="login-username"
-          name="login-username"
+          id="username"
+          name="username"
           placeholder="Username"
         />
         <input
@@ -15,37 +15,22 @@
           name="login-password"
           placeholder="Password"
         />
-        <input type="submit" id="login-submit" value="Submit" />
+        <input type="submit" id="login" value="Log In" />
       </form>
     </div>
     <div class="right">
       <h1>Create Account</h1>
       <form>
-        <input
-          type="text"
-          id="login-create-fName"
-          name="login-create-fName"
-          placeholder="First Name"
-        />
-        <input
-          type="text"
-          id="login-create-lName"
-          name="login-create-lName"
-          placeholder="Last Name"
-        />
-        <input
-          type="email"
-          id="login-create-email"
-          name="login-create-email"
-          placeholder="Email"
-        />
+        <input type="text" id="fName" name="fName" placeholder="First Name" />
+        <input type="text" id="lName" name="lName" placeholder="Last Name" />
+        <input type="email" id="email" name="email" placeholder="Email" />
         <input
           type="password"
-          id="login-create-password"
-          name="login-create-password"
+          id="create-password"
+          name="create-password"
           placeholder="Password"
         />
-        <input type="submit" id="login-create-submit" value="Submit" />
+        <input type="submit" id="submit" value="Submit" />
       </form>
     </div>
   </div>
