--- a/pages/edit/edit.html
+++ b/pages/edit/edit.html
@@ -1,28 +1,13 @@
 <section class="edit">
   <h1>Edit Form</h1>
   <form>
-    <input
-      type="text"
-      id="edit-fName"
-      name="edit-fName"
-      placeholder="First Name"
-    />
-    <input
-      type="text"
-      id="edit-lName"
-      name="edit-lName"
-      placeholder="Last Name"
-    />
-    <input type="email" id="edit-email" name="edit-email" placeholder="Email" />
-    <input
-      type="tel"
-      id="edit-phone"
-      name="edit-phone"
-      placeholder="Telephone"
-    />
+    <input type="text" id="fName" name="fName" placeholder="First Name" />
+    <input type="text" id="lName" name="lName" placeholder="Last Name" />
+    <input type="email" id="email" name="email" placeholder="Email" />
+    <input type="tel" id="pTel" name="pTel" placeholder="Telephone" />
     <div class="buttonRow">
       <input type="submit" id="edit" value="Edit" />
-      <input type="submit" id="edit-submit" value="Submit" />
+      <input type="submit" id="submit" value="Submit" />
     </div>
   </form>
 </section>
